visione di un esempio di calcolatrice

--- a/calcolatrice.html
+++ b/calcolatrice.html
@@ -13,7 +13,10 @@
     <div class="container">
 	<h1>Calcolatrice</h1>
 		<div class="row" style="padding: 5px; border:5px solid black; width: 200px;">
-			<div class="col-" id="schermo"></div>
+			<div class="col-" id="schermo">
+				<div id="result"><p>0</p></div>
+				<div id="previous"><p>0</p></div>
+			</div>
 		</div>
 		<div class="row">
 			<div class="col-"><button id="pot2" style="width: 50px;">2^x</button></div>
