--- a/esempioMemory2.html
+++ b/esempioMemory2.html
@@ -128,8 +128,8 @@ function scopri(pos){
 						$("#"+imgprec.toString()+" img").attr('src','img/card.png');
 						$("#"+imgcorr.toString()+" img").attr('src','img/card.png');
 						selcorrente = -1;
-						console.log(imgprec);
-						console.log(imgcorr);
+						//console.log(imgprec);
+						//console.log(imgcorr);
 					}
 					
 		}
