--- a/esempioMemory2.html
+++ b/esempioMemory2.html
@@ -11,7 +11,7 @@
   </head>
 <body>
 	<div class="container">
-		<h1>8 Puzzle Game</h1>
+		<h1>Memory Game</h1>
 		<br>
 		<label class="invisible" id="win">Complimenti, hai vinto!</label>
 			<div class="row" id="0">
