modifiche finali con creazione cartella prove

--- a/registrazione.html
+++ b/registrazione.html
@@ -354,7 +354,8 @@
 					dimension: dm,
 					type: tp,
 					color: col,
-					menu: posMenu
+					menu: posMenu,
+					loggato: false,
 					
 				}));
 				
