--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			  <div class="form-group">
 				<label for="email1">E-mail</label>
 				<input type="email" class="form-control" id="email1" aria-describedby="emailHelp" placeholder="Inserisci e-mail">
-                <u><p id="emailHelp">N.B. ricorda che la mail deve essere nel formato nome@dominio.qualcosa</p></u>
+                <!--<u><p id="emailHelp">N.B. ricorda che la mail deve essere nel formato nome@dominio.qualcosa</p></u>-->
 			  </div>
 			  <div class="form-group">
 				<label for="pass1">Password</label>
@@ -34,6 +34,17 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	
 	<script>
+	console.log(user);
+	if (localStorage.getItem('user') != null)
+	{
+		var user = JSON.parse(localStorage.getItem('user'));
+	
+		if (user.loggato)
+			{
+				window.location.replace("homepage.html");
+			}
+	}
+	
 	$('#entra').click(function () {
 		var user = $('#email1').val();
 		var pwd = $('#pass1').val();
@@ -53,13 +64,16 @@
 				else
 					{
 						console.log(user);
+						user.loggato = true;
+						localStorage.setItem('user',JSON.stringify(user));
+						//console.log();
 						alert("benvenuto!");
+						window.location.replace("homepage.html");
 						
 						//localStorage.set(utenteloggato);
 					}		
 			}
 			
-		window.location.replace("homepage.html");
 		
 	});
 	</script>
