--- a/homepage_fab.html
+++ b/homepage_fab.html
@@ -7,7 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<title>Benvenuto!</title>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src=js/puzzle.js crossorigin="anonymous"></script>	
+    <title>Giochi!</title>
   </head>
   <body>
     <div class="container">
@@ -16,9 +22,7 @@
 				<h1 id="titolo" class="invisible">Ciao, <b id="name"></b>! Benvenuto nella Homepage!</h1>
 				<button type="button" class="btn btn-link invisible" id="btnreg">Registrati</button>
 			
-				<div>
-					
-					<iframe id="frame" class="embed-responsive-item invisible" src="" width="500" height="500"></iframe>
+				<div id="playground">
 				</div>
 				
 				valutare poi tasto ESCI .... esce dall'area
@@ -39,12 +43,7 @@
 		</div>
 	</div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	
+
 	<script>
 
 	
@@ -57,7 +56,6 @@
 		$('body').css("font-size", user.dimension);
 		$('body').css("font-family", user.type); 
 		$('body').css("color", user.color);
-		console.log(user.menu);
 		if (user.menu == "sin")
 			{
 				$('#menuHome').removeClass("order-2").addClass("order-1");
@@ -100,7 +98,8 @@
 		
 		$('#btnpuzzle').click(function () {
 			//alert("entro");
-			$('#frame').attr({"class": "embed-responsive-item visible", "src": "8puzzle.html"});
+            mostra_puzzle();
+			//$('#frame').attr({"class": "embed-responsive-item visible", "src": "8puzzle.html"});
 			//alert("esco");
 		});
 		
