ultime modifiche, praticamente e' finito

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				var user = JSON.parse(localStorage.getItem('user'));
 				if (user.username && user.pwd != pwd)
 					{
-						alert("login fallito....");
+						alert("login fallito! Non esiste nessun utente con queste credenziali");
 					}
 				else
 					{
