--- a/memorygame.html
+++ b/memorygame.html
@@ -4,7 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+	<!-- Uso un font da google -->
+	<link href="https://fonts.googleapis.com/css?family=Dokdo" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>Benvenuto!</title>
@@ -42,6 +44,8 @@
 	<button id="nuovogioco" type="submit" class="btn btn-primary">Nuovo Gioco</button>
 	<br>
 	<label>numero mosse effettuate:<b id="mosse"></b></label>
+	<br>
+	<button type="button" class="btn btn-info" id="tornahome">Torna alla Homepage</button>
 </body>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -49,6 +53,27 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>
+function applicaPreferenze(){
+	var user = JSON.parse(localStorage.getItem('user'));
+	$('#titolo').attr("class","visible");
+	$('#name').html(user.username);
+	console.log(user);
+	$('body').css("background-color", user.background);
+	$('body').css("font-size", user.dimension);
+	$('body').css("font-family", user.type); 
+	$('body').css("color", user.color);
+	if (user.menu == "sin")
+		{
+			$('#menuHome').removeClass("order-2").addClass("order-1");
+			$('#bodyHome').removeClass("order-1").addClass("order-2");
+		}
+	else
+		{
+			$('#menuHome').removeClass("order-1").addClass("order-2");
+			$('#bodyHome').removeClass("order-2").addClass("order-1");
+		}
+}
+
 var contacoppie = 0;
 var contaclick = 0;
 
@@ -138,6 +163,15 @@ function scopri(pos){
 
 $(document).ready(function(){
 
+	if (localStorage.getItem('user') === null)
+		{
+			alert("Errore, devi registrarti con i tuoi dati");
+			window.location.replace("index.html");
+			//$('#btnreg').attr("class","visible");
+		}
+	else
+		applicaPreferenze();
+
 	$('img').attr('src','img/card.png');
     
 	shuffle(celle);
@@ -162,6 +196,10 @@ $(document).ready(function(){
 		console.log(clickcella);
 		scopri(Number(clickcella));
     });
+	
+	$('#tornahome').click(function (){
+		window.location='homepage.html';
+	});
 
 });
 </script>
